# dreamworld

./: .gitignore  AGENTS.md  ARCHITECTURE.md  GOAL.md  README.md  pyproject.toml
dreamtrack/: __init__.py
dreamtrack/configs/: collect.yaml
dreamtrack/data/: collect_rollouts.py  dataset.py  preprocess.py
dreamtrack/eval/: compare_real_vs_dream.py  eval_dynamics.py  eval_planner.py  eval_reconstruction.py  failure_analysis.py
dreamtrack/experiments/: README.md  __init__.py  artifacts.py  dashboard.py
dreamtrack/models/: autoencoder.py  dynamics_transformer.py
dreamtrack/plan/: cem.py  mpc_agent.py  random_shooting.py
dreamtrack/train/: train_autoencoder.py  train_dynamics.py  train_vqvae.py
dreamtrack/viz/: dashboard.py  plots.py  video.py
dreamworld/: __init__.py  config.py
dreamworld/configs/: dynamics_transformer.yaml  planner_cem.yaml  tokenizer_ae.yaml  tokenizer_vqvae.yaml
dreamworld/data/: __init__.py  collect_rollouts.py  dataset.py
dreamworld/eval/: compare_real_vs_dream.py  eval_dynamics.py  eval_planner.py  eval_reconstruction.py  failure_analysis.py
dreamworld/experiments/: __init__.py  artifacts.py  dashboard.py
dreamworld/models/: __init__.py  vqvae.py
dreamworld/plan/: __init__.py  cem.py  mpc_agent.py
dreamworld/research/: __init__.py  launch.py  loop.py
dreamworld/train/: train_autoencoder.py  train_dynamics.py  train_vqvae.py
dreamworld/viz/: dashboard.py  grids.py
experiments/specs/: baseline_debug.yaml
infra/: __init__.py  modal_app.py
