[project]
name = "dreamtrack"
version = "0.1.0"
description = "Modern world-model experiments for Gymnasium CarRacing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium[box2d]>=1.1.0",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pillow>=11.0.0",
    "pyyaml>=6.0.2",
    "torch>=2.6.0",
    "tqdm>=4.67.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.11.0",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
